--- a/app/views/book/view_booking.erb
+++ b/app/views/book/view_booking.erb
@@ -347,7 +347,19 @@
         </div><!--modal body의 div-->      
         <div class="modal-footer" id="menu_font" style="font-size:18px;">
           <button type="button" class="btn btn-default" data-dismiss="modal" id="menu_font">Close</button>
-           
+            <!--<2% if current_user.email == "admin@ptu.ac.kr" %>-->
+            <!--  <2% if c.state=="승인대기" %>-->
+            <!--    <button type="button" class="btn btn-success" id="button<2%=c.id%>" onclick="change(<2%=c.id%>)">승인</button>-->
+              
+            <!--  <2% elsif c.state=="거절" %>-->
+            <!--    <button type="button" class="btn btn-success" id="button<2%=c.id%>" onclick="change(<2%=c.id%>)">승인</button>-->
+                
+            <!--  <2% else %>-->
+                
+            <!--    <button type="button" class="btn btn-danger" id="myModal<2%=c.id%>" data-toggle="modal" data-target="#myModal<2%=c.id%>">거절</button>-->
+            <!--  <2%end%>-->
+              
+            <!--<2% end %>  -->
         </div>      
       </div>
     </div>
