--- a/app/views/book/real_main.erb
+++ b/app/views/book/real_main.erb
@@ -577,9 +577,9 @@
         <div class="modal-footer" id="menu_font" style="font-size:18px;">
           <button type="button" class="btn btn-default" data-dismiss="modal" id="menu_font">Close</button>
           
-          <a href="/book/view_booking?id=<%=c.id%>&date=<%=c.date%>" >
-          <button type="button" class="btn btn-default">바로가기</button>
-          </a>
+          <!--<a href="/book/view_booking?id=<2%=c.id%>&date=<2%=c.date%>" >-->
+          <!--<button type="button" class="btn btn-default">바로가기</button>-->
+          <!--</a>-->
             <%# if current_user.email == "admin@ptu.ac.kr" %>
             
               <%# if c.state=="승인대기" %>
